Actions
Bug #3145
closedarm-linux向けクロスコンパイル時のエラー
Bug #3145:
arm-linux向けクロスコンパイル時のエラー
Description
=begin
なかだです。
At Tue, 13 Apr 2010 21:40:07 +0900,
Satoshi Shiba wrote in [ruby-dev:40973]:
thread_pthread.c: In function 'get_stack':
thread_pthread.c:224: error: invalid use of void expression
これは以下のようにしても通りますか?
Index: thread_pthread.c¶
--- thread_pthread.c (revision 27335)
+++ thread_pthread.c (working copy)
@@ -222,5 +222,5 @@ get_stack(void **addr, size_t *size)
if (pthread_attr_getguardsize(&attr, &guard) == 0) {
STACK_GROW_DIR_DETECTION;
- STACK_DIR_UPPER((void)0, *addr = (char *)*addr + guard);
- STACK_DIR_UPPER((void)0, (void)(*addr = (char *)*addr + guard));
*size -= guard;
}
--
--- 僕の前にBugはない。
--- 僕の後ろにBugはできる。
中田 伸悦
=end
Updated by nobu (Nobuyoshi Nakada) almost 16 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
=begin
This issue was solved with changeset r27338.
Nobuyoshi, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.
=end
Actions